fix missing apis
